ops/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-frontend
  namespace: axion
  labels:
    app: axion-frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: axion-frontend
  template:
    metadata:
      labels:
        app: axion-frontend
    spec:
      containers:
        - name: axion-frontend
          image: krishanand01/axion-frontend:v1.2.14
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
          volumeMounts:
            - name: env-file
              mountPath: /etc/axion/frontend.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: axion-frontend-env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-backend
  namespace: axion
  labels:
    app: axion-backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: axion-backend
  template:
    metadata:
      labels:
        app: axion-backend
    spec:
      containers:
        - name: axion-backend
          image: krishanand01/axion-backend:v1.2.16
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/backend/.env
              subPath: env
            - name: gcp-key-volume
              mountPath: /app/apps/backend/vm-manager.json
              subPath: vm-manager.json
              readOnly: true
      volumes:
        - name: env-file
          secret:
            secretName: axion-backend-env
        - name: gcp-key-volume
          secret:
            secretName: gcp-key-secret

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-indexer
  namespace: axion
  labels:
    app: axion-indexer
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: axion-indexer
  template:
    metadata:
      labels:
        app: axion-indexer
    spec:
      containers:
        - name: axion-indexer
          image: krishanand01/axion-indexer:v1.2.13
          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/indexer/.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: axion-indexer-env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-worker
  namespace: axion
  labels:
    app: axion-worker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: axion-worker
  template:
    metadata:
      labels:
        app: axion-worker
    spec:
      containers:
        - name: axion-worker
          image: krishanand01/axion-worker:v1.2.13
          ports:
            - containerPort: 9094
          livenessProbe:
            httpGet:
              path: /health
              port: 9094
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 9094
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "1Gi"
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/worker/.env
              subPath: env
            - name: gcp-key-volume
              mountPath: /app/apps/worker/vm-manager.json
              subPath: vm-manager.json
      volumes:
        - name: env-file
          secret:
            secretName: axion-worker-env
        - name: gcp-key-volume
          secret:
            secretName: gcp-key-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-ws-relayer
  namespace: axion
  labels:
    app: axion-ws-relayer
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: axion-ws-relayer
  template:
    metadata:
      labels:
        app: axion-ws-relayer
    spec:
      containers:
        - name: axion-ws-relayer
          image: krishanand01/axion-ws-relayer:v1.2.13
          ports:
            - containerPort: 9093
          livenessProbe:
            httpGet:
              path: /health
              port: 9093
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 9093
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/ws-relayer/.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: axion-ws-relayer-env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-depin-ws-relayer
  namespace: axion
  labels:
    app: axion-depin-ws-relayer
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: axion-depin-ws-relayer
  template:
    metadata:
      labels:
        app: axion-depin-ws-relayer
    spec:
      containers:
        - name: axion-depin-ws-relayer
          image: krishanand01/axion-depin-ws-relayer:v1.2.13
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/depin-ws-relayer/.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: axion-depin-ws-relayer-env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: axion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        emptyDir: {}
---
